# gfx

./: CMakeLists.txt
android/: .gitignore
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
demo/: Demo.cpp  Demo.h  Gfx_demo.cpp  Gfx_demo.h  Gfx_texture_demo.cpp  Gfx_texture_demo.h  Gfx_triangle_demo.cpp  Gfx_triangle_demo.h  Phong_demo.cpp  Phong_demo.h  Texture_demo.cpp  Texture_demo.h  Triangle_demo.cpp  Triangle_demo.h  gfx_demo.cpp  gfx_lib_modules.h  gfx_texture.frag  gfx_texture.vert  gfx_triangle.frag  gfx_triangle.vert  main.cpp  platform_lib_modules.h  sc_lib_modules.h  stb_lib.h  stb_lib_modules.h  util.cpp  util.h
include/gfx/: Buffer.h  Clear_value.h  Cmd_buffer.h  Cmd_list.h  Device.h  Fence.h  Image.h  Pipeline.h  Sampler.h  Shader.h  Swap_chain.h  enums.h  limitations.h  types.h
res/shader/: composite.frag  composite.vert  flat.frag  flat.vert  gouraud.frag  gouraud.vert  imgui.frag  imgui.vert  lamp.frag  lamp.vert  phong.frag  phong.vert  triangle.frag  triangle.vert
src/: Device.cpp  Lru_cache.h  Pipeline.cpp  std_lib.h  std_lib_modules.h
src/mtl/: Mtl_buffer.h  Mtl_buffer.mm  Mtl_cmd_buffer.h  Mtl_cmd_buffer.mm  Mtl_cmd_list.h  Mtl_cmd_list.mm  Mtl_device.h  Mtl_device.mm  Mtl_fence.h  Mtl_fence.mm  Mtl_image.h  Mtl_image.mm  Mtl_pipeline.h  Mtl_pipeline.mm  Mtl_sampler.h  Mtl_sampler.mm  Mtl_shader.h  Mtl_shader.mm  Mtl_swap_chain.h  Mtl_swap_chain.mm  mtl_lib.h  mtl_lib_modules.h
src/ogl/: Ogl_buffer.cpp  Ogl_buffer.h  Ogl_cmd_buffer.cpp  Ogl_cmd_buffer.h  Ogl_device.cpp  Ogl_device.h  Ogl_fence.cpp  Ogl_fence.h  Ogl_framebuffer.cpp  Ogl_framebuffer.h  Ogl_image.cpp  Ogl_image.h  Ogl_pipeline.cpp  Ogl_pipeline.h  Ogl_sampler.cpp  Ogl_sampler.h  Ogl_shader.cpp  Ogl_shader.h  Ogl_swap_chain.cpp  Ogl_swap_chain.h  ogl_lib.h
src/vlk/: Vlk_buffer.cpp  Vlk_buffer.h  Vlk_cmd_buffer.cpp  Vlk_cmd_buffer.h  Vlk_device.cpp  Vlk_device.h  Vlk_fence.cpp  Vlk_fence.h  Vlk_framebuffer.cpp  Vlk_framebuffer.h  Vlk_image.cpp  Vlk_image.h  Vlk_pipeline.cpp  Vlk_pipeline.h  Vlk_render_pass.cpp  Vlk_render_pass.h  Vlk_sampler.cpp  Vlk_sampler.h  Vlk_set_layout.cpp  Vlk_set_layout.h  Vlk_shader.cpp  Vlk_shader.h  Vlk_swap_chain.cpp  Vlk_swap_chain.h  vlk_lib.h  vlk_lib_modules.h
